--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.3"
+    "nuxt": "3.0.0-rc.3",
+    "sass": "^1.53.0"
+  },
+  "dependencies": {
+    "@nuxt/vite-builder": "^3.0.0-rc.3",
+    "vuetify": "3.0.0-beta.4"
   }
 }
